# LLMEval

./: .gitignore  EvaluationHandler.py  EvaluationModules.py  LICENSE  LLMEval.py  Models.py  README.md  localTester.py  pyproject.toml  results.csv
.github/ISSUE_TEMPLATE/: user-story.md
LLMResponses/: README.txt  bleu.txt
SprintDocumentation/Sprint1/: linkToDemoVideo.txt
SprintDocumentation/Sprint2/: linkToDemoVideo.txt.txt
SprintDocumentation/Sprint5/: LinkToVideo.txt  Sprint5Report.md
SprintDocumentation/Sprint6/: sprint5Report.md
demo/: demo.py
evaluatorData/: README.txt  bert.txt  editDistance.txt
evaluatorDependencies/: chrF.py  factscorer.py
evaluatorPrompt/: README.txt  bert.txt  meteor.txt  wer.txt
prompts/: prompts.txt
tests/: args.py  test_LLMEval.py  test_models.py
