[tool.poetry]
name = "LLMEval"
version = "0.1.0"
description = "A tool for evaluating the performance of LLMs"
authors = ["temp"]

[tool.poetry.dependencies]
python = "^3.9"
nltk
abc
torch
jiwer
transformers
bert_score
lexical_diversity
gensim
rouge_score
multiprocessing

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"