[tool.poetry]
name = "LLMEval"
version = "0.1.0"
description = "A tool for evaluating the performance of LLMs"
authors = ["temp"]

[tool.poetry.dependencies]
python = "*"
nltk = "*"
torch = "*"
jiwer = "*"
transformers = "*"
bert-score = "*"
lexical_diversity = "*"
gensim = "*"
rouge_score = "*"
Detoxify = "*"
spacy = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"